[metadata]
name = xflow_test
version = 0.0.1
summary = Basic Tempest plugin with a hello world test case
author = Hussain Mehdi
author-email = syed.mehdi@xflowresearch.com
home-page = https://github.com/shmehdi/xflow_test
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    xflow_test = xflow_test_tempest_plugin.plugin:automation

[pbr]
warnerrors = true
